--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Моя Страница</title>
+	<title>Моя Страница1</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
